syntax = "proto3";
package heraldsquareAPI;
import "enum.proto";

message Event {
  int64                               event_id                     = 1;  
  string                              system_event_id              = 2;  
  System                              system                       = 3;
  string                              function                     = 4;
  int64                               user_id                      = 5; 
  string                              timestamp                    = 6;
  bytes                               metadata                     = 7;
  string                              payload                      = 8;  
  string                              message                      = 9;  
  bool                                error                        = 10;    
}


message EventRequest { 
   string                              token                     = 1;  
   int64                               event_id                  = 2;
}

message EventResponse { 
   Retcode                             retcode                   = 1;
   repeated Event                      events                    = 2; 
   string                              comment                   = 3;   
   string                              elapsed                   = 4;  
}